--- a/index.html
+++ b/index.html
@@ -1,347 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Appel – Groupes Scouts</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Appel Scout</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <!-- ===== CSS inline ===== -->
-  <style>
-    :root {
-      --bg: #ffffff; --fg: #222222; --muted: #666666;
-      --primary: #2563eb; --accent: #f97316; --border: #e5e7eb;
-    }
-    [data-theme="dark"] {
-      --bg: #0f172a; --fg: #e5e7eb; --muted: #94a3b8;
-      --primary: #60a5fa; --accent: #fb923c; --border: #1f2937;
-    }
-    * { box-sizing: border-box; }
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin:0; background:var(--bg); color:var(--fg); }
-    .topbar { display:flex; align-items:center; justify-content:space-between; padding:1rem; border-bottom:1px solid var(--border); position:sticky; top:0; background:var(--bg); }
-    main { max-width: 1000px; margin: 0 auto; padding: 1rem; }
-    h1, h2 { margin: 0.5rem 0; }
-    .controls, .groups, .history, .stats, .qr { margin-top: 1rem; }
-    .group { border:1px solid var(--border); border-radius:8px; padding:1rem; margin-bottom:1rem; }
-    .add-row { display:flex; gap:0.5rem; margin-bottom:0.5rem; }
-    input[type="text"], input[type="date"] { padding:0.5rem; border:1px solid var(--border); border-radius:6px; background:var(--bg); color:var(--fg); }
-    button { padding:0.5rem 0.8rem; border:1px solid var(--border); background:var(--bg); color:var(--fg); border-radius:6px; cursor:pointer; }
-    button.primary { background:var(--primary); color:white; border-color:var(--primary); }
-    button:hover { filter: brightness(1.05); }
-    .children-list { list-style:none; padding:0; margin:0; }
-    .child-item { display:flex; align-items:center; justify-content:space-between; padding:0.4rem 0; border-bottom:1px dashed var(--border); }
-    .child-left { display:flex; align-items:center; gap:0.5rem; }
-    .child-actions { display:flex; align-items:center; gap:0.5rem; }
-    .child-name { font-weight:600; }
-    .history-container { border:1px solid var(--border); border-radius:8px; padding:0.5rem; }
-    .history-entry { border-bottom:1px dashed var(--border); padding:0.5rem 0; }
-    .history-entry:last-child { border-bottom:none; }
-    .stats canvas { max-width:100%; background:var(--bg); border:1px solid var(--border); border-radius:8px; padding:0.5rem; }
-    .muted { color:var(--muted); font-size:0.9rem; }
-    .qr #qrcode { width:128px; height:128px; }
-    footer { text-align:center; padding:1rem; color:var(--muted); }
-  </style>
+    <header>
+        <h1>🏕️ Appel Scout</h1>
+        <p id="date-jour"></p>
+    </header>
 
-  <!-- ===== Libs via CDN (nécessitent internet) ===== -->
-  <!-- Chart.js UMD -->
-  https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js</script>
-  <!-- QRCode.js via cdnjs -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"
-          integrity="sha512-LVZnW31f8q0j6rC6V9HfY – Groupes Scouts</h1>
-    <button id="themeToggle" aria-label="Basculer thème">🌙/☀️</button>
-  </header>
+    <div class="tabs">
+        <button class="tab-link active" onclick="openTab(event, 'Louveteaux')">🐺 Louveteaux</button>
+        <button class="tab-link" onclick="openTab(event, 'Eclaireurs')">⚜️ Éclaireurs</button>
+    </div>
 
-  <main>
-    <!-- Contrôles -->
-    <section class="controls">
-      <label for="callDate">Date :</label>
-      <input type="date" id="callDate" />
-      <button id="validateCall" class="primary">Valider l'appel</button>
-    </section>
+    <div id="Louveteaux" class="tab-content" style="display: block;">
+        <h2>Liste des Louveteaux</h2>
+        <ul id="liste-louveteaux" class="scout-list">
+            </ul>
+    </div>
 
-    <!-- Groupes -->
-    <section class="groups">
-      <div class="group">
-        <h2>Louveteaux-Louvettes</h2>
-        <div class="add-row">
-          <input id="addName-LL" type="text" placeholder="Nom" />
-          <button class="addBtn" data-target="LL">Ajouter</button>
-          <button class="exportBtn" data-target="LL">Export CSV</button>
-        </div>
-        <ul id="list-LL" class="children-list"></ul>
-      </div>
+    <div id="Eclaireurs" class="tab-content">
+        <h2>Liste des Éclaireurs</h2>
+        <ul id="liste-eclaireurs" class="scout-list">
+            </ul>
+    </div>
 
-      <div class="group">
-        <h2>Éclaireurs-Éclaireuses</h2>
-        <div class="add-row">
-          <input id="addName-EE" type="text" placeholder="Nom" />
-          <button class="addBtn" data-target="EE">Ajouter</button>
-          <button class="exportBtn" data-target="EE">Export CSV</button>
-        </div>
-        <ul id="list-EE" class="children-list"></ul>
-      </div>
-    </section>
+    <div class="actions">
+        <button onclick="exporterAppel()" class="btn-save">💾 Télécharger l'Appel (.csv)</button>
+    </div>
 
-    <!-- Historique -->
-    <section class="history">
-      <h2>Historique</h2>
-      <div class="filters">
-        <label for="filterDate">Filtrer par date</label>
-        <input type="date" id="filterDate" />
-        <button id="clearFilter">Effacer filtre</button>
-      </div>
-      <div id="historyContainer" class="history-container" aria-live="polite"></div>
-    </section>
-
-    <!-- Statistiques -->
-    <section class="stats">
-      <h2>Statistiques des présences</h2>
-      <canvas id="presenceChart" width="600" height="280" aria-label="Graphique des présences"></canvas>
-      <p id="chartStatus" class="muted"></p>
-    </section>
-
-    <!-- QR Code -->
-    <section class="qr">
-      <h2>Partager cette page</h2>
-      <div id="qrcode" title="QR Code vers cette page"></div>
-      <p id="qrStatus" class="muted"></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>Fonctionne en local et sur GitHub Pages. Données stockées dans LocalStorage.</p>
-  </footer>
-
-  <!-- ===== JS inline ===== -->
-  <script>
-  (function(){
-    const qs  = (sel, root=document) => root.querySelector(sel);
-    const qsa = (sel, root=document) => Array.from(root.querySelectorAll(sel));
-    const storageKey = 'appel_scouts_v1';
-    const historyKey = 'appel_scouts_history_v1';
-    const themeKey   = 'appel_scouts_theme';
-
-    const state = {
-      groups: {
-        LL: { name: 'Louveteaux-Louvettes', children: [] },
-        EE: { name: 'Éclaireurs-Éclaireuses', children: [] }
-      }
-    };
-
-    function load() {
-      try {
-        const raw = localStorage.getItem(storageKey);
-        if (raw) {
-          const data = JSON.parse(raw);
-          if (data && data.groups && data.groups.LL && data.groups.EE) {
-            state.groups = data.groups;
-          }
-        }
-      } catch (e) { console.warn('⚠️ LocalStorage lecture:', e); }
-      const savedTheme = localStorage.getItem(themeKey);
-      if (savedTheme) document.documentElement.setAttribute('data-theme', savedTheme);
-    }
-    function save() {
-      try { localStorage.setItem(storageKey, JSON.stringify({ groups: state.groups })); }
-      catch (e) { console.warn('⚠️ LocalStorage écriture:', e); }
-    }
-    function saveHistory(entry) {
-      try {
-        const raw = localStorage.getItem(historyKey);
-        const list = raw ? JSON.parse(raw) : [];
-        list.push(entry);
-        localStorage.setItem(historyKey, JSON.stringify(list));
-      } catch (e) { console.warn('⚠️ Historique écriture:', e); }
-    }
-    function getHistory() {
-      try { return JSON.parse(localStorage.getItem(historyKey) || '[]'); }
-      catch (e) { return []; }
-    }
-
-    function renderGroup(id) {
-      const ul = qs('#list-' + id);
-      if (!ul) return;
-      ul.innerHTML = '';
-      state.groups[id].children.forEach((child, idx) => {
-        const li = document.createElement('li');
-        li.className = 'child-item';
-        li.innerHTML = `
-          <div class="child-left">
-            <input type="checkbox" aria-label="Présent" ${child.present ? 'checked' : ''} />
-            <span class="child-name">${child.name}</span>
-          </div>
-          <div class="child-actions">
-            <button class="delBtn">Supprimer</button>
-          </div>`;
-        const checkbox = qs('input[type="checkbox"]', li);
-        checkbox.addEventListener('change', (e) => { child.present = e.target.checked; });
-        const del = qs('.delBtn', li);
-        del.addEventListener('click', () => {
-          state.groups[id].children.splice(idx, 1);
-          save(); renderGroup(id);
-        });
-        ul.appendChild(li);
-      });
-    }
-
-    function renderAll() {
-      renderGroup('LL');
-      renderGroup('EE');
-      renderHistory();
-      renderChart();
-    }
-
-    function addChild(id, name) {
-      const trimmed = (name || '').trim();
-      if (!trimmed) return;
-      state.groups[id].children.push({ name: trimmed, present: false });
-      save(); renderGroup(id);
-    }
-
-    function exportCSV(id) {
-      const group = state.groups[id];
-      const rows = [['Nom', 'Présent']].concat(group.children.map(c => [c.name, c.present ? 'Oui' : 'Non']));
-      const csv = rows.map(r => r.map(v => '"' + String(v).replace('"', '""') + '"').join(';')).join('\\n');
-      const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
-      const url  = URL.createObjectURL(blob);
-      const a    = document.createElement('a');
-      a.href     = url;
-      const dateStr = new Date().toISOString().slice(0,10);
-      a.download = `${group.name.replace(/\\s+/g,'_')}_${dateStr}.csv`;
-      document.body.appendChild(a);
-      a.click(); a.remove(); URL.revokeObjectURL(url);
-    }
-
-    function validateCall() {
-      const date = qs('#callDate').value || new Date().toISOString().slice(0,10);
-      const entry = {
-        date,
-        groups: {
-          LL: state.groups.LL.children.map(c => ({ name: c.name, present: !!c.present })),
-          EE: state.groups.EE.children.map(c => ({ name: c.name, present: !!c.present }))
-        }
-      };
-      saveHistory(entry);
-      ['LL','EE'].forEach(g => state.groups[g].children.forEach(c => c.present = false));
-      save();
-      renderAll();
-      renderQR();
-    }
-
-    function renderHistory() {
-      const container = qs('#historyContainer');
-      const filterDate = qs('#filterDate').value;
-      const list = getHistory().filter(e => !filterDate || e.date === filterDate);
-      container.innerHTML = '';
-      if (list.length === 0) {
-        container.innerHTML = '<p>Aucun enregistrement pour cette sélection.</p>';
-        return;
-      }
-      list.slice().reverse().forEach(entry => {
-        const div = document.createElement('div');
-        div.className = 'history-entry';
-        const llPresent = entry.groups.LL.filter(c => c.present).length;
-        const eePresent = entry.groups.EE.filter(c => c.present).length;
-        div.innerHTML = `
-          <strong>${entry.date}</strong><br>
-          ${state.groups.LL.name}: ${llPresent}/${entry.groups.LL.length} présents<br>
-          ${state.groups.EE.name}: ${eePresent}/${entry.groups.EE.length} présents`;
-        container.appendChild(div);
-      });
-    }
-
-    // Chart.js avec garde
-    let chart;
-    function renderChart() {
-      const ctx = qs('#presenceChart');
-      const status = qs('#chartStatus');
-      if (!ctx) return;
-      if (typeof window.Chart === 'undefined') {
-        if (status) status.textContent = 'ℹ️ Chart.js non chargé : stats indisponibles (connexion requise).';
-        console.warn('Chart.js non disponible.');
-        return;
-      }
-      const history = getHistory();
-      const labels = history.map(e => e.date);
-      const llData = history.map(e => e.groups.LL.filter(c=>c.present).length);
-      const eeData = history.map(e => e.groups.EE.filter(c=>c.present).length);
-      if (chart) chart.destroy();
-      const cs = getComputedStyle(document.documentElement);
-      chart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels,
-          datasets: [
-            { label: 'Louveteaux-Louvettes', data: llData, borderColor: cs.getPropertyValue('--primary').trim(), tension: 0.2 },
-            { label: 'Éclaireurs-Éclaireuses', data: eeData, borderColor: cs.getPropertyValue('--accent').trim(), tension: 0.2 }
-          ]
-        },
-        options: {
-          plugins: { legend: { labels: { color: cs.getPropertyValue('--fg').trim() } } },
-          scales: {
-            x: { ticks: { color: cs.getPropertyValue('--fg').trim() }, grid: { color: cs.getPropertyValue('--border').trim() } },
-            y: { ticks: { color: cs.getPropertyValue('--fg').trim() }, grid: { color: cs.getPropertyValue('--border').trim() } }
-          }
-        }
-      });
-      if (status) status.textContent = '';
-    }
-
-    // QR Code avec garde
-    function renderQR() {
-      const container = qs('#qrcode');
-      const status = qs('#qrStatus');
-      if (!container) return;
-      if (typeof window.QRCode === 'undefined') {
-        if (status) status.textContent = 'ℹ️ QRCode.js non chargé : QR indisponible (connexion requise).';
-        console.warn('QRCode.js non disponible.');
-        return;
-      }
-      container.innerHTML = '';
-      new QRCode(container, { text: window.location.href, width: 128, height: 128 });
-      if (status) status.textContent = '';
-    }
-
-    function setupTheme() {
-      const btn = qs('#themeToggle');
-      btn.addEventListener('click', () => {
-        const current = document.documentElement.getAttribute('data-theme');
-        const next = current === 'dark' ? 'light' : 'dark';
-        document.documentElement.setAttribute('data-theme', next);
-        localStorage.setItem(themeKey, next);
-        renderChart(); // refresh couleurs
-      });
-      if (!localStorage.getItem(themeKey)) {
-        document.documentElement.setAttribute('data-theme', 'light');
-      }
-    }
-
-    function setupEvents() {
-      qsa('.addBtn').forEach(btn => {
-        const id = btn.getAttribute('data-target');
-        btn.addEventListener('click', () => {
-          const input = qs('#addName-' + id);
-          addChild(id, input.value);
-          input.value = ''; input.focus();
-        });
-      });
-      qsa('.exportBtn').forEach(btn => {
-        const id = btn.getAttribute('data-target');
-        btn.addEventListener('click', () => exportCSV(id));
-      });
-      qs('#validateCall').addEventListener('click', validateCall);
-      qs('#filterDate').addEventListener('change', renderHistory);
-      qs('#clearFilter').addEventListener('click', () => { qs('#filterDate').value=''; renderHistory(); });
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      load();
-      setupTheme();
-      setupEvents();
-      renderAll();
-      renderQR();
-      console.log('%c✅ Application chargée', 'background:#22c55e; color:white; padding:2px 6px; border-radius:4px');
-    });
-  })();
-  </script>
+    <script src="script.js"></script>
 </body>
 </html>
