--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="actions">
-        <button onclick="exporterAppel()" class="btn-save">💾 Télécharger l'Appel (.csv)</button>
+        <button onclick="exporterAppel()" class="btn-save">💾 Enregistrer l'Appel sur Drive</button>
     </div>
 
     <script src="script.js"></script>
