--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
 
     <div id="Louveteaux" class="tab-content" style="display: block;">
         <h2>Liste des Louveteaux</h2>
-        <ul id="liste-louveteaux" class="scout-list">
-            <li>Chargement...</li>
-        </ul>
+        <ul id="liste-louveteaux" class="scout-list"><li>Chargement...</li></ul>
     </div>
 
     <div id="Eclaireurs" class="tab-content">
         <h2>Liste des Éclaireurs</h2>
-        <ul id="liste-eclaireurs" class="scout-list">
-            <li>Chargement...</li>
-        </ul>
+        <ul id="liste-eclaireurs" class="scout-list"><li>Chargement...</li></ul>
     </div>
 
     <div class="actions">
@@ -37,13 +33,31 @@
     </div>
 
     <div class="add-section" style="margin-top: 30px; padding: 20px; background: #fff; border-radius: 8px;">
-        <h3>➕ Ajouter un jeune (Permanent)</h3>
-        <input type="text" id="nouveau-nom" placeholder="Prénom Nom" style="padding: 10px; width: 70%; margin-bottom: 10px;">
+        <h3>➕ Ajouter un jeune</h3>
+        <input type="text" id="nouveau-nom" placeholder="Prénom Nom" style="padding: 10px; width: 60%; margin-bottom: 10px;">
         <select id="nouveau-groupe" style="padding: 10px;">
             <option value="Louveteaux">Louveteaux</option>
             <option value="Eclaireurs">Eclaireurs</option>
         </select>
-        <button onclick="ajouterEnfant()" style="background-color: #27ae60; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; margin-top: 10px;">Ajouter</button>
+        <button onclick="ajouterEnfant()" style="background-color: #27ae60; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">Ajouter</button>
+    </div>
+
+    <div id="modal-fiche" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <span class="close-btn" onclick="fermerModal()">&times;</span>
+            <h2 id="modal-nom">Prénom Nom</h2>
+            <div class="modal-body">
+                <p><strong>👨‍👩‍👦 Parents :</strong> <span id="modal-parents"></span></p>
+                <p><strong>📞 Tél :</strong> <a id="modal-tel-link" href="#"> <span id="modal-tel"></span></a></p>
+                <p><strong>📧 Mail :</strong> <a id="modal-mail-link" href="#"> <span id="modal-mail"></span></a></p>
+                
+                <p><strong>💰 Paiement :</strong> <span id="modal-paiement"></span></p>
+                <p><strong>⚕️ Info/Médical :</strong> <span id="modal-medical" style="color: #e74c3c; font-weight: bold;"></span></p>
+            </div>
+            <div class="modal-footer">
+                <button onclick="fermerModal()" style="background: #95a5a6;">Fermer</button>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
